REFs/CKAD/ckad_exam_sample/task1.2ctnr.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod-b
  name: pod-b
  namespace: ckad-ns1
spec:
  containers:
  - args:
    - sleep
    - 1d
    image: alpine
    name: pod-b
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
