REFs/CKAD/ckad_exam_sample/task4.sidecar-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: sidecar-pod
  name: sidecar-pod
  namespace: ckad-ns3
spec:
  containers:
  - image: busybox
    name: bbox
    command: ["/bin/sh"]
    args: ["-c", "while true; do date >>/var/log/date.log;sleep 5;done"]
    volumeMounts:
    - mountPath: /var/log
      name: log
  - image: nginx
    name: ngx
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: log
    imagePullPolicy: IfNotPresent
  volumes:
  - name: log
    hostPath:
      path: /data
  - name: made
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
